<resources>
    <string name="app_name">Wi-Map</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="mapping">Mapping</string>
    <string name="detection">Detection</string>
    <string name="history">History</string>
    <string name="settings">Settings</string>
    <string name="wi_map">Wi-Map</string>
    <string name="scan">Scan</string>
    <string name="_45_dbm">-45 dBm</string>
    <string name="bssid">BSSID</string>
    <string name="ssid">SSID</string>
    <string name="m">-- m</string>
    <string name="_0_m">0 m</string>
    <string name="_14_23">14:23</string>
    <string name="_55_dbm">-55 dBm</string>
    <string name="_25_m">25 m</string>
    <string name="myhomenet">MyHomeNet</string>
    <string name="clear">Clear</string>
    <string name="start_scan">Start Scan</string>
    <string name="stop_scan">Stop Scan</string>
    <string name="detection_estimate">Estimated position:\nLat: %1$s, Lon: %2$s\nMatched networks: %3$d
</string>
    <string name="detection_saved">Detection saved</string>
    <string name="permission_denied">Permission denied</string>
    <string name="save_detection">Save Detection</string>
    <string name="history_cleared">History cleared</string>
    <string name="go_to_mapping">Go to Mapping</string>
    <string name="refresh">Refresh</string>
    <string name="lat_lon">Lat: ---, Lon: ---</string>
    <string name="map_current_location">Map Current Location</string>
    <string name="clear_mapped_networks">Clear mapped networks</string>
</resources>