<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_mapping">

    <fragment
        android:id="@+id/navigation_mapping"
        android:name="com.example.wi_map.ui.mapping.MappingFragment"
        android:label="@string/mapping"
        tools:layout="@layout/fragment_mapping" />

    <fragment
        android:id="@+id/navigation_detection"
        android:name="com.example.wi_map.ui.detection.DetectionFragment"
        android:label="@string/detection"
        tools:layout="@layout/fragment_detection" />

    <fragment
        android:id="@+id/navigation_history"
        android:name="com.example.wi_map.ui.history.HistoryFragment"
        android:label="@string/history"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.wi_map.ui.settings.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />
</navigation>