<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    card:cardCornerRadius="8dp"
    card:cardElevation="2dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="12dp">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_ssid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ssid"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/m"
            android:textSize="14sp"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_rssi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_45_dbm"
            android:textSize="14sp"/>

    </LinearLayout>
</androidx.cardview.widget.CardView>
